[package]
name = "psauction-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.22"
scraper = "0.19.1"
serde_json = "1.0"
serenity = { version = "0.11.5", features = ["http", "model"] }
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
